# imasparql_details

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs  structs.rs
templates/: detail.tera  error.tera
