[package]
name = "imasparql_details"
version = "0.1.0"
authors = ["jon"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
serde = "*"
serde_json = "*"
serde_derive = "*"
ureq = { version = "*", features = ["json"] }
url = "*"
percent-encoding = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]